--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
+    "start": "node bin/www app.js",
     "test": "mocha"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "mocha": "5.0.5",
     "morgan": "~1.8.1",
     "multer": "1.3.0",
+    "mysql": "2.15.0",
     "nodemon": "1.17.2",
     "passport": "0.4.0",
     "passport-http": "0.3.0"
